Fix submit button width on small screens

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -156,6 +156,7 @@ pre {
   padding: 15px;
   border-radius: 30px;
   transition: all 0.5s;
+  min-width: 75px;
 }
 .submitButton:hover {
   background-color: #e40520;
